[package]
name = "textedit"
version = "0.1.0"
authors = ["theaaaaaaa <theah0032@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid_ui = {version = "0.1.1", features = ["crossterm"]}
crossterm = "0.22.1"
unicode-segmentation = "1.8.0"