[package]
name = "textedit"
version = "0.1.0"
authors = ["theaaaaaaa <theah0032@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid_ui = {version = "0.1.1", features = ["crossterm"]}
crossterm = {version = "0.23.0", features = ["serde"]}
unicode-segmentation = "1.8.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
cli-clipboard = "0.4.0"
